[gd_scene load_steps=40 format=2]

[ext_resource path="res://Characters/Player/Player.gd" type="Script" id=1]
[ext_resource path="res://Camera2D.gd" type="Script" id=2]
[ext_resource path="res://icon.png" type="Texture" id=3]
[ext_resource path="res://Characters/Player/Health.gd" type="Script" id=4]
[ext_resource path="res://Health_Bar_2 (1).png" type="Texture" id=5]
[ext_resource path="res://Health_Bar_1_(fixed) (1).png" type="Texture" id=6]
[ext_resource path="res://Characters/Player/damage vingette.png" type="Texture" id=7]
[ext_resource path="res://Characters/Player/Effects.gd" type="Script" id=8]
[ext_resource path="res://Characters/Player/spritesheet_1.png" type="Texture" id=9]
[ext_resource path="res://Characters/light.png" type="Texture" id=10]
[ext_resource path="res://Characters/Player/Ghost_Up_Slash-7.png" type="Texture" id=11]
[ext_resource path="res://Characters/Player/Ghost_Down_Slash-7.png" type="Texture" id=12]
[ext_resource path="res://Characters/Player/Ghost_Slash_2-6.png" type="Texture" id=13]
[ext_resource path="res://Characters/Player/Damage.tscn" type="PackedScene" id=14]
[ext_resource path="res://Characters/Player/BerryLabel.gd" type="Script" id=15]

[sub_resource type="VisualShader" id=1]
code = "shader_type spatial;
render_mode specular_schlick_ggx;




void vertex() {
// Output:0

}

void fragment() {
// Output:0

}

void light() {
// Output:0

}
"
graph_offset = Vector2( 0, 318 )

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )

[sub_resource type="VisualShader" id=3]
code = "shader_type spatial;
render_mode specular_schlick_ggx;




void vertex() {
// Output:0

}

void fragment() {
// Output:0

}

void light() {
// Output:0

}
"

[sub_resource type="ShaderMaterial" id=4]
shader = SubResource( 3 )

[sub_resource type="VisualShader" id=5]
code = "shader_type spatial;
render_mode specular_schlick_ggx;




void vertex() {
// Output:0

}

void fragment() {
// Output:0

}

void light() {
// Output:0

}
"

[sub_resource type="ShaderMaterial" id=6]
render_priority = 1
shader = SubResource( 5 )

[sub_resource type="Animation" id=7]
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Camera2D/Post Processing/Edge blur/damage vingette:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.95 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.996078, 0.796078, 0.796078, 0 ), Color( 0.0352941, 0.027451, 0.027451, 0.733333 ), Color( 0.996078, 0.796078, 0.796078, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Camera2D/Post Processing/Edge blur/Edge blur:material:shader_param/blur_amount")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.579, 0.0, 0.579 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Camera2D/Post Processing/Curve/Curve:material:shader_param/tiled_factor")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.05, 0.4, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0.052, 0.071 ), Vector2( 0, 0 ), Vector2( 0, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Camera2D/Post Processing/Curve/Curve:material:shader_param/zoom")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.05, 0.4, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 1.0, 0.893, 1.0, 1.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Camera2D/Post Processing/chromatic abberation/chromatic abberation:material:shader_param/amount")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.05, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.004, 0.037, 0.004 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Camera2D/Post Processing/Edge blur/Edge blur:material:shader_param/blur_amount")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.05, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.579, 0.0, 0.579 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Camera2D:zoom")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = false
tracks/6/keys = {
"times": PoolRealArray( 0, 0.1, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1.5, 1.5 ), Vector2( 1.2, 1.2 ), Vector2( 1.5, 1.5 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Camera2D:offset")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.4, 2.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 20, 15 ), Vector2( -20, -10 ), Vector2( 0, 0 ), Vector2( 0, 0 ) ]
}

[sub_resource type="ShaderMaterial" id=8]

[sub_resource type="SpriteFrames" id=10]
animations = [ {
"frames": [ ExtResource( 12 ), ExtResource( 12 ), ExtResource( 12 ), ExtResource( 12 ), ExtResource( 12 ), ExtResource( 12 ), ExtResource( 12 ) ],
"loop": true,
"name": "Down",
"speed": 5.0
}, {
"frames": [ ExtResource( 13 ) ],
"loop": true,
"name": "Slash1",
"speed": 5.0
}, {
"frames": [ ExtResource( 11 ) ],
"loop": true,
"name": "Up",
"speed": 5.0
}, {
"frames": [ ExtResource( 13 ) ],
"loop": true,
"name": "Slash2",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=11]
animations = [ {
"frames": [ ExtResource( 12 ), ExtResource( 12 ), ExtResource( 12 ), ExtResource( 12 ), ExtResource( 12 ), ExtResource( 12 ), ExtResource( 12 ) ],
"loop": true,
"name": "Down",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=12]
animations = [ {
"frames": [ ExtResource( 11 ) ],
"loop": true,
"name": "Up",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 21.1691, 48.9094 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 139.708, 40.5604 )

[sub_resource type="Animation" id=14]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Player_sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 2, 3, 4 ]
}

[sub_resource type="Animation" id=15]
length = 1.2
tracks/0/type = "value"
tracks/0/path = NodePath("Player_sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.5, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 15, 16, 17, 18 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("World_collision/Attack/Attack_collision:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("World_collision/Attack/Attack_collision:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 45.3482, 166.252 ) ]
}

[sub_resource type="Animation" id=16]
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Player_sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 27, 28 ]
}

[sub_resource type="Animation" id=17]
length = 20.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Player_sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 19.8, 19.9 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 0, 67 ]
}

[sub_resource type="Animation" id=18]
length = 0.9
tracks/0/type = "value"
tracks/0/path = NodePath("Player_sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 22, 23, 24, 25, 26, 27, 28 ]
}

[sub_resource type="Animation" id=19]
length = 0.5
step = 0.025
tracks/0/type = "value"
tracks/0/path = NodePath("World_collision/Attack:monitoring")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.025, 0.275 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Player_sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.075, 0.125 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 53, 55, 54 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("World_collision/Attack/Attack_collision:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.425, 0.45 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, true ]
}

[sub_resource type="Animation" id=20]
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("World_collision/Attack:monitoring")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.45 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Player_sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 55, 56 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("World_collision/Attack/Attack_collision:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.35, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, true ]
}

[sub_resource type="Animation" id=23]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Player_sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 24 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Player_sprite:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("World_collision/Attack/Attack_collision:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -2.5227, 81.108 ) ]
}

[sub_resource type="Animation" id=24]
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("Player_sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 68, 70, 71 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("World_collision/Attack/Attack_collision:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("World_collision/Attack/Attack_collision:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 62.0337, 4.73589 ) ]
}

[sub_resource type="Animation" id=25]
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Player_sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 74, 75, 76, 77, 78 ]
}

[sub_resource type="OccluderPolygon2D" id=26]
polygon = PoolVector2Array( -10.4957, -4.00331, -5.36686, -4.08608, -5.57764, 4.02564, -11.1983, 4.60504 )

[node name="Player" type="KinematicBody2D" groups=["Player"]]
collision_layer = 2
collision_mask = 391
script = ExtResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( -19.7477, -33.1361 )
current = true
zoom = Vector2( 1.5, 1.5 )
limit_left = 0
limit_top = 0
limit_right = 2049
limit_bottom = 2049
smoothing_enabled = true
drag_margin_top = 0.75
script = ExtResource( 2 )

[node name="Tween" type="Tween" parent="Camera2D"]

[node name="ViewportContainer" type="ViewportContainer" parent="Camera2D"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Post Processing" type="CanvasLayer" parent="Camera2D"]
layer = 13

[node name="Curve" type="CanvasLayer" parent="Camera2D/Post Processing"]
layer = 18

[node name="Curve" type="Sprite" parent="Camera2D/Post Processing/Curve"]
visible = false
material = SubResource( 2 )
position = Vector2( 578.198, 553.58 )
scale = Vector2( 18.164, 17.397 )
z_index = 38
texture = ExtResource( 3 )

[node name="ui" type="Node2D" parent="Camera2D/Post Processing/Curve"]

[node name="BerryScore" type="CanvasLayer" parent="Camera2D/Post Processing/Curve/ui"]

[node name="BerryLabel" type="Label" parent="Camera2D/Post Processing/Curve/ui/BerryScore"]
margin_left = 2.0
margin_top = 116.0
margin_right = 144.0
margin_bottom = 202.0
rect_scale = Vector2( 3.95579, 3.7488 )
text = "Berries: 0"
script = ExtResource( 15 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Health" type="CanvasLayer" parent="Camera2D/Post Processing/Curve/ui"]
layer = 19
script = ExtResource( 4 )

[node name="Health_Bar_2 (1)" type="Sprite" parent="Camera2D/Post Processing/Curve/ui/Health"]
position = Vector2( 205.916, 178.932 )
scale = Vector2( 0.253553, 0.33434 )
texture = ExtResource( 5 )

[node name="1" type="Sprite" parent="Camera2D/Post Processing/Curve/ui/Health/Health_Bar_2 (1)"]
position = Vector2( -507.238, -320.742 )
scale = Vector2( 0.22775, 0.178726 )
texture = ExtResource( 6 )

[node name="2" type="Sprite" parent="Camera2D/Post Processing/Curve/ui/Health/Health_Bar_2 (1)"]
position = Vector2( -274.546, -320.742 )
scale = Vector2( 0.22775, 0.178726 )
texture = ExtResource( 6 )

[node name="3" type="Sprite" parent="Camera2D/Post Processing/Curve/ui/Health/Health_Bar_2 (1)"]
position = Vector2( -41.8532, -320.742 )
scale = Vector2( 0.22775, 0.178726 )
texture = ExtResource( 6 )

[node name="4" type="Sprite" parent="Camera2D/Post Processing/Curve/ui/Health/Health_Bar_2 (1)"]
position = Vector2( 190.84, -320.742 )
scale = Vector2( 0.22775, 0.178726 )
texture = ExtResource( 6 )

[node name="5" type="Sprite" parent="Camera2D/Post Processing/Curve/ui/Health/Health_Bar_2 (1)"]
position = Vector2( 423.533, -320.742 )
scale = Vector2( 0.22775, 0.178726 )
texture = ExtResource( 6 )

[node name="chromatic abberation" type="CanvasLayer" parent="Camera2D/Post Processing"]
layer = 11

[node name="chromatic abberation" type="Sprite" parent="Camera2D/Post Processing/chromatic abberation"]
visible = false
material = SubResource( 4 )
position = Vector2( 573.341, 393.849 )
scale = Vector2( 18.064, 12.329 )
z_index = 38
texture = ExtResource( 3 )

[node name="Edge blur" type="CanvasLayer" parent="Camera2D/Post Processing"]
layer = 12

[node name="Edge blur" type="Sprite" parent="Camera2D/Post Processing/Edge blur"]
visible = false
material = SubResource( 6 )
position = Vector2( 573.916, 392.529 )
scale = Vector2( 18.064, 12.329 )
z_index = 36
texture = ExtResource( 3 )

[node name="damage vingette" type="Sprite" parent="Camera2D/Post Processing/Edge blur"]
modulate = Color( 0.996078, 0.796078, 0.796078, 0 )
position = Vector2( 572.216, 323.186 )
scale = Vector2( 0.601395, 0.601395 )
z_index = -1
texture = ExtResource( 7 )

[node name="Effects" type="AnimationPlayer" parent="."]
anims/Damage = SubResource( 7 )
script = ExtResource( 8 )

[node name="Player_sprite" type="Sprite" parent="."]
material = SubResource( 8 )
position = Vector2( 21, -34 )
scale = Vector2( 2.11864, 2.11594 )
z_index = 8
texture = ExtResource( 9 )
flip_h = true
hframes = 10
vframes = 8
frame = 24

[node name="AttackSlash" type="AnimatedSprite" parent="Player_sprite"]
position = Vector2( 8.96802, 1.89041 )
scale = Vector2( 0.291395, 0.171511 )
frames = SubResource( 10 )
animation = "Slash1"
playing = true

[node name="DownSlash" type="AnimatedSprite" parent="Player_sprite"]
position = Vector2( 5.19201, 7.08905 )
scale = Vector2( 0.182041, 0.05979 )
frames = SubResource( 11 )
animation = "Down"

[node name="UpSlash" type="AnimatedSprite" parent="Player_sprite"]
position = Vector2( 11.8, -40.6439 )
scale = Vector2( 0.186311, 0.0523934 )
frames = SubResource( 12 )
animation = "Up"

[node name="World_collision" type="CollisionShape2D" parent="." groups=["World_Collision"]]
position = Vector2( 4.10633, -41.0906 )
rotation = -3.14159
shape = SubResource( 13 )
one_way_collision = true
one_way_collision_margin = 0.0

[node name="Attack" type="Area2D" parent="World_collision" groups=["Attack"]]
position = Vector2( 40.5838, 70.0173 )
rotation = 3.14159
collision_layer = 10
collision_mask = 10
monitoring = false

[node name="Attack_collision" type="CollisionShape2D" parent="World_collision/Attack" groups=["Attack"]]
position = Vector2( -2.5227, 81.108 )
shape = SubResource( 9 )

[node name="Dash" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="Dash_invun" type="Timer" parent="."]
wait_time = 18.968

[node name="DashLag" type="Timer" parent="."]
one_shot = true

[node name="sound_dash" type="AudioStreamPlayer2D" parent="."]

[node name="sound_damage" type="AudioStreamPlayer2D" parent="."]
volume_db = 0.642

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Idle"
anims/Dash = SubResource( 14 )
anims/DownSlash = SubResource( 15 )
anims/Fall = SubResource( 16 )
anims/Idle = SubResource( 17 )
anims/Jump = SubResource( 18 )
anims/Punch = SubResource( 19 )
anims/Punch2 = SubResource( 20 )
anims/RESET = SubResource( 23 )
anims/UpSlash = SubResource( 24 )
anims/Walk = SubResource( 25 )

[node name="jump_timer" type="Timer" parent="."]
one_shot = true

[node name="DamageTimer" type="Timer" parent="."]
one_shot = true

[node name="Attack_timer" type="Timer" parent="."]

[node name="Attack_timer2" type="Timer" parent="."]

[node name="DashTimer" type="Timer" parent="."]
wait_time = 0.1

[node name="jump_particles" type="Node2D" parent="."]
position = Vector2( -14.1581, 28.7882 )

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
visible = false
position = Vector2( 89.1344, -12.539 )
scale = Vector2( 12.6804, 10.7632 )
occluder = SubResource( 26 )

[node name="Light2D" type="Light2D" parent="."]
visible = false
position = Vector2( -10.0381, -11.6982 )
scale = Vector2( 12.6804, 10.7632 )
texture = ExtResource( 10 )
texture_scale = 0.16
energy = 1.39
range_height = 16.1
range_layer_min = -19
range_layer_max = 8
shadow_enabled = true
shadow_gradient_length = 3.0

[node name="Node2D" parent="." instance=ExtResource( 14 )]

[node name="Oli" type="Node2D" parent="."]

[connection signal="grounded_updated" from="." to="Camera2D" method="_on_Player_grounded_updated"]
[connection signal="health_update" from="." to="Camera2D/Post Processing/Curve/ui/Health" method="_on_Player_health_update"]
[connection signal="area_entered" from="World_collision/Attack" to="." method="_on_Attack_area_entered"]
[connection signal="body_entered" from="World_collision/Attack" to="." method="_on_Attack_body_entered"]
[connection signal="body_shape_entered" from="World_collision/Attack" to="." method="_on_Attack_body_shape_entered"]
[connection signal="timeout" from="Dash" to="." method="_on_Dash_timeout"]
[connection signal="timeout" from="Dash_invun" to="." method="_on_Dash_invun_timeout"]
[connection signal="timeout" from="DashLag" to="." method="_on_DashLag_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="jump_timer" to="." method="_on_jump_timer_timeout"]
[connection signal="timeout" from="DamageTimer" to="." method="_on_Damage_timeout"]
[connection signal="timeout" from="Attack_timer" to="." method="_on_Attack_timer_timeout"]
[connection signal="timeout" from="Attack_timer2" to="." method="_on_Attack_timer2_timeout"]
[connection signal="timeout" from="DashTimer" to="." method="_on_DashTimer_timeout"]
